# image-tools

./: .gitmodules  Cargo.toml  run.sh
.cargo/: config
align/: Cargo.toml  alignment.json
align-api/: Cargo.toml
align-api/src/: lib.rs
align/src/: main.rs
astrometry/: Cargo.toml
astrometry/src/: errors.rs  lib.rs
autoguider/: .gitignore  Cargo.toml  donuts  log4rs.yml  plot-donuts.py  plot-slew-by.py  run-donuts  shoot-and-solve.sh  shoot.sh
autoguider/.cargo/: config
autoguider/src/: aligner.rs  autoguider.rs  camera.rs  main.rs  mount.rs  pos.rs  signal.rs
convert/: Cargo.toml
convert/src/: lib.rs
donuts/: Cargo.toml  compare-donuts.py  perf-results.txt
donuts-cli/: Cargo.toml
donuts-cli/src/: main.rs
donuts/.cargo/: config
donuts/src/: align.rs  correlation.rs  correlation_2d.rs  cross_iter.rs  cross_range.rs  image.rs  lib.rs  projection.rs  remove_background.rs  three_axis.rs  three_axis_2d.rs  vector.rs
find-stars/: Cargo.toml  plot.py  test.py
find-stars/src/: main.rs
fits/: Cargo.toml
fits/src/: lib.rs
flat/: .gitignore  Cargo.toml
flat/src/: main.rs
flat_field/: .gitignore  Cargo.toml
flat_field/src/: main.rs
geom/: Cargo.toml
geom/src/: lib.rs  math.rs  matrix.rs  point.rs  unit.rs  vector.rs
gphoto/: Cargo.toml
gphoto/src/: errors.rs  lib.rs
image/: Cargo.toml
image/benches/: image_rbg_f32.rs
image/src/: channel.rs  convert_array.rs  dcraw.rs  fits.rs  gray_image.rs  identify.rs  image.rs  image_f32.rs  image_kind.rs  image_rgb_bayer.rs  image_rgb_f32.rs  image_rgb_u8.rs  image_u16.rs  image_u8.rs  lib.rs  magick.rs  pgm.rs  rgb.rs  rgb_bayer.rs  rgb_image.rs  util.rs
imagemagick/: Cargo.toml
imagemagick/src/: convert.rs  identify.rs  lib.rs
jpeg-test/: Cargo.toml
jpeg-test/src/: main.rs
misc-tests/: .gitattributes  Cargo.toml
misc-tests/src/: lib.rs
misc-tests/test/: bias-frame.CR2
misc-tests/test/dark-frames/: IMG_0506.CR2
places/: beehive.sh  comet_10pm.sh  leo_minor.sh  virgo.sh
point/: Cargo.toml
point/places/: auriga_cluster.sh  beehive.sh  comet_real.sh
point/src/: errors.rs  gphoto.rs  lib.rs  main.rs
post/: Cargo.toml
post/src/: main.rs
sextractor/: Cargo.toml
sextractor/src/: lib.rs
sextractor/src/config/: default.param  default.sex
sieve/: Cargo.toml
sieve/server/: Cargo.toml
sieve/src/: main.rs
sieve/ui/: .gitignore  Main.elm  Makefile
src/: convert.rs  image.rs  main.rs  math.rs  point.rs  refine_center.rs  spiral.rs  star_aligner.rs  star_finder.rs  star_stacker.rs  triangle.rs  types.rs
stack/: .gitignore  Cargo.toml
stack/src/: cli.yml  main.rs
star_aligner/: .gitattributes  Cargo.toml
star_aligner/src/: lib.rs  rigid_body.rs
star_aligner/test/: a.fits  a.stars.json  b.fits  b.stars.json
star_stuff/: Cargo.toml
star_stuff/src/: drizzle.rs  lib.rs  point.rs  refine_center.rs  star_aligner.rs  star_finder.rs  star_stacker.rs  types.rs
turbojpeg/: build.rs
turbojpeg/src/: lib.rs
(+2 files in other folders)
