[workspace]
members = [
  "align",
  "align-api",
  "astrometry",
  "autoguider",
  "convert",
  "donuts",
  "donuts-cli",
  "find-stars",
  "fits",
  "flat",
  "geom",
  "gphoto",
  "image",
  "imagemagick",
  "jpeg-test",
  "point",
  "post",
  "sextractor",
  "sieve",
  "stack",
  "star_aligner",
  "star_stuff",
]
