[package]
name = "autoguider"
version = "0.1.0"
authors = ["eman <eman>"]

[dependencies]
log = "*"
crossbeam = "*"
tempfile = "*"
log4rs = { version = "*", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
scope_client = { path = "../../scope-mount/client" }

[dev-dependencies]
env_logger = "*"

[profile.dev]
panic = "abort"
