[package]
name = "autoguider"
version = "0.1.0"
authors = ["eman <eman>"]

[dependencies]
log = "*"
crossbeam = "*"
tempfile = "*"
log4rs = { version = "*", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
pid_control = "*"
mount_service_api = { path = "../../scope-mount/mount_service_api" }
donuts = { path = "../donuts" }
image = { path = "../image" }

[dev-dependencies]
env_logger = "*"
