[package]
name = "autoguider"
version = "0.1.0"

[dependencies]
log = "*"
crossbeam = "*"
tempfile = "*"
log4rs = { version = "*", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
pid_control = "*"
mount_service_api = { path = "../../scope-mount/mount_service_api" }
donuts = { path = "../donuts" }
image = { path = "../image" }
geom = { path = "../geom" }
point = { path = "../point" }
gphoto = { path = "../gphoto" }
#gphoto2-sys = { path = "../../gphoto2-sys" }
#gphoto = "*"
docopt = "*"
rustc-serialize = "*"
retry = "*"

[dev-dependencies]
env_logger = "*"
