[package]
name = "point"
version = "0.1.0"

[dependencies]
structopt = "*"
structopt-derive = "*"
mount_service_api = { path = "../../scope-mount/mount_service_api" }
astrometry = { path = "../astrometry" }
gphoto = { path = "../gphoto" }
regex = "*"
log = "*"
env_logger = "*"
retry = "*"
error-chain = "*"
